fix: remove gutter around hero image on mobile

--- a/assets/css/src/parts/terraso.scss
+++ b/assets/css/src/parts/terraso.scss
@@ -571,6 +571,15 @@ header.tg-page-header.tg-page-header--left-right {
 		a {
 			color: white;
 		}
+
+		@media screen and (max-width: 768px) {
+			padding-left: 0;
+			padding-right: 0;
+
+			.login-join {
+				padding-left: 0;
+			}
+		}
 	}
 }
 
